# automotive-portfolio

./: .gitignore  README.md
diagnostic-simulator/: CMakeLists.txt  README.md
diagnostic-simulator/.github/workflows/: ci.yml
diagnostic-simulator/include/: can_socket.h  did_store.h  dtc_state_machine.h  uds_server.h  uds_types.h
diagnostic-simulator/src/: can_socket.cpp  did_store.cpp  dtc_state_machine.cpp  main.cpp  main_old.cpp  uds_server.cpp
diagnostic-simulator/tests/: test_did_store.cpp  test_dtc_state_machine.cpp  test_uds_response_format.cpp
